Update  index.html

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 						<span class="date">2024-Present</span>
 						<h2>Technical Leader</h2>
 						<span class="position">CodeEternity</span>
-						<p class="mt-4">CodeEternity, CodeEternity is an Information Technology startup company that offers hands-on opportunities for aspiring developers to gain real-world experience in building and maintaining the server-side of web applications. Our mission is to empower young talents to learn cutting-edge technologies and contribute to meaningful projects. At CodeEternity, we collaborate with our interns to enhance their coding skills and help them achieve their career goals
+						<p class="mt-4">CodeEternity is an Information Technology startup company that offers hands-on opportunities for aspiring developers to gain real-world experience in building and maintaining the server-side of web applications. Our mission is to empower young talents to learn cutting-edge technologies and contribute to meaningful projects. At CodeEternity, we collaborate with our interns to enhance their coding skills and help them achieve their career goals
 							<ul>
 								<li>Writing unit, integration, and end-to-end tests to ensure application reliability.Debugging and troubleshooting code issues across the entire stack.</li>
 								<li>Developed server-side logic, APIs, and databases using languages like Node.js, Python.Managing server, application, and database configurations.Ensuring security and data protection measures.
