--- a/index.html
+++ b/index.html
@@ -171,9 +171,9 @@
 										<div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="80" aria-valuemin="0"
 											aria-valuemax="100"></div>
 									</div>
-									<span>MERN</span> <span class="pull-right">80%</span>
+									<span>MERN</span> 
 									<div class="progress">
-										<div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0"
+										<div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="80" aria-valuemin="0"
 											aria-valuemax="100"></div>
 									</div>
 									<span>JAVA</span> 
@@ -298,7 +298,7 @@
     					<span class="date">2023-2025</span>
     					<h2>Master of Computer Applications</h2>
     					<span class="position">Galgotias University</span>
-    					<p class="mt-4">CGPA:9.0/10</p>
+    					<p class="mt-4">CGPA:8.64/10</p>
     				</div>
     			</div>
 
