--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Vivek Portfolio </title>
+	  <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+    <title>Vivek Kumar Singh </title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
